create menu data pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,3 +3,11 @@
 :root {
   font-family: "Poppins", sans-serif;
 }
+
+.comment-content {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-line-clamp: 2;
+  text-overflow: ellipsis;
+}
